[gd_scene load_steps=11 format=3 uid="uid://t6843pn1g1h"]

[ext_resource type="Script" path="res://Room/RoomVerticalRectangle.gd" id="1_wr53k"]
[ext_resource type="TileSet" uid="uid://bicrh8c0vpkmj" path="res://Room/backgrounds/LevelTileSet.tres" id="2_eadh4"]
[ext_resource type="PackedScene" uid="uid://cpfb5oqnkmsva" path="res://Room/level_door.tscn" id="3_7uyri"]
[ext_resource type="PackedScene" uid="uid://dq26a4yywyp17" path="res://Characters/alice.tscn" id="3_aaabw"]
[ext_resource type="PackedScene" uid="uid://bweertwcm6i6q" path="res://Room/door_collision.tscn" id="4_3ouf4"]
[ext_resource type="Script" path="res://Gui/CanvasLayer.gd" id="5_ocw3v"]
[ext_resource type="PackedScene" uid="uid://bd80li557mpc7" path="res://Gui/inventory.tscn" id="7_gxwug"]
[ext_resource type="PackedScene" uid="uid://207fyv11i2ku" path="res://Gui/settings/settingsNode.tscn" id="8_hnx62"]
[ext_resource type="PackedScene" uid="uid://ksglnjwhxn4m" path="res://Room/map.tscn" id="9_ebg54"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khe4g"]
size = Vector2(256, 305.453)

[node name="Room" type="Node2D"]
scale = Vector2(1.27901, 1.19423)
script = ExtResource("1_wr53k")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_eadh4")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 131073, 1, 131072, 131073, 1, 196608, 131073, 1, 262144, 131073, 1, 327680, 131073, 1, 1, 131073, 65536, 65537, 327681, 1, 131073, 327681, 1, 196609, 327681, 1, 262145, 327681, 2, 327681, 327681, 3, 2, 131073, 4, 65538, 393217, 1, 196610, 393217, 1, 262146, 393217, 2, 327682, 393217, 3, 3, 131073, 65536, 65539, 458753, 2, 131075, 262145, 3, 196611, 458753, 2, 262147, 458753, 393218, 4, 65537, 2, 65540, 327681, 2, 131076, 327681, 3, 196612, 327681, 2, 262148, 327681, 3, 5, 65537, 65538, 65541, 327681, 2, 131077, 327681, 3, 196613, 327681, 2, 262149, 327681, 3, 327685, 327681, 1, 6, 131073, 0, 7, 196609, 4, 65543, 327681, 2, 131079, 262145, 3, 196615, 262145, 4, 8, 131073, 0, 65544, 327681, 2, 131080, 327681, 3, 196616, 327681, 1, 262152, 327681, 2, 9, 65537, 0, 65545, 65537, 3, 131081, 65537, 3, 196617, 65537, 3, 262153, 65537, 3, 131074, 393217, 1, 393224, 327681, 2, 524296, 327681, 1, 589832, 327681, 1, 655368, 327681, 1, 393217, 327681, 2, 458753, 327681, 3, 524289, 327681, 1, 589825, 327681, 2, 655361, 327681, 3, 655362, 327681, 3, 655363, 327681, 3, 655364, 327681, 3, 655365, 327681, 3, 655366, 458753, 262146, 655367, 262145, 4, 589831, 262145, 4, 589830, 393217, 2, 589829, 327681, 2, 589828, 327681, 2, 589827, 458753, 2, 589826, 393217, 2, 524290, 393217, 1, 458754, 458753, 262146, 393218, 458753, 65538, 393219, 262145, 1, 458755, 262145, 2, 524291, 262145, 3, 524292, 327681, 3, 524293, 327681, 3, 458757, 327681, 2, 458756, 327681, 2, 393221, 327681, 1, 524295, 262145, 4, 458759, 262145, 3, 393223, 458753, 2, 393225, 65537, 3, 458761, 65537, 3, 524297, 65537, 3, 589833, 65537, 3, 655369, 65537, 3, 720905, 65537, 1, 720904, 196609, 1, 720903, 196609, 1, 720902, 196609, 1, 720901, 1, 65538, 720900, 1, 2, 720899, 196609, 65537, 720898, 196609, 65537, 720897, 196609, 65537, 720896, 1, 1, 655360, 131073, 1, 589824, 131073, 1, 524288, 131073, 1, 458752, 131073, 1, 393216, 131073, 1, 458760, 327681, 3, 327687, 262145, 3, 262151, 458753, 2, 327683, 262145, 1, 327684, 327681, 1, 393220, 327681, 1, 327688, 327681, 3, 327689, 65537, 3, 524294, 458753, 262146, 458758, 393217, 2, 393222, 393217, 1, 327686, 393217, 1, 262150, 458753, 262146, 196614, 393217, 2, 131078, 458753, 262146, 65542, 327681, 2)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="BL" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(0.781855, 150.725)
polygon = PackedVector2Array(-3, 150, 113, 150, 113.369, 118.905, 23.4556, 118.905, 22, 86, -3, 86)

[node name="TR" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(320, 176)
rotation = 3.14159
polygon = PackedVector2Array(69.9995, 176, 186, 176, 186, 151, 94.9996, 151, 94.9997, 110, 69.9997, 110)

[node name="TL" type="CollisionPolygon2D" parent="Walls"]
polygon = PackedVector2Array(116, 0, 116, 25, 25, 25, 25, 66, 0, 62, 0, 0)

[node name="BR" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(321.342, 326.57)
rotation = 3.14159
polygon = PackedVector2Array(186, 26.0005, 186.081, 56.9407, 94.604, 56.9405, 94.9998, 92.0002, 70.3666, 92.1097, 69.9999, 26.0002)

[node name="BR2" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(100.077, 190.918)
rotation = 3.14159
polygon = PackedVector2Array(76.6214, -24.2832, 98.5137, -5.0239, 99.2953, 92.1098, 75.8392, 102.995)

[node name="BR3" type="CollisionPolygon2D" parent="Walls"]
position = Vector2(318.997, 186.731)
rotation = 3.14159
polygon = PackedVector2Array(93.8229, -26.7955, 93.8226, 100.483, 68.0211, 92.9471, 69.5851, -13.3976)

[node name="Floor" type="Area2D" parent="."]
scale = Vector2(0.781053, 0.854414)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(163.167, 173.467)
shape = SubResource("RectangleShape2D_khe4g")

[node name="Doors" type="Node2D" parent="."]

[node name="UpDoor" type="Node2D" parent="Doors"]

[node name="LevelDoor4" parent="Doors/UpDoor" instance=ExtResource("3_7uyri")]
position = Vector2(125, 12)

[node name="DoorCollision" parent="Doors/UpDoor" instance=ExtResource("4_3ouf4")]
position = Vector2(125, 15)

[node name="DownDoor" type="Node2D" parent="Doors"]

[node name="LevelDoor" parent="Doors/DownDoor" instance=ExtResource("3_7uyri")]
position = Vector2(125.879, 285.54)
rotation = 3.14159

[node name="DoorCollision" parent="Doors/DownDoor" instance=ExtResource("4_3ouf4")]
position = Vector2(125.879, 283.028)

[node name="LeftDoor" type="Node2D" parent="Doors"]

[node name="LevelDoor3" parent="Doors/LeftDoor" instance=ExtResource("3_7uyri")]
position = Vector2(12, 75)
rotation = -1.5708

[node name="DoorCollision" parent="Doors/LeftDoor" instance=ExtResource("4_3ouf4")]
position = Vector2(15, 76)

[node name="LeftDoor2" type="Node2D" parent="Doors"]

[node name="LevelDoor3" parent="Doors/LeftDoor2" instance=ExtResource("3_7uyri")]
position = Vector2(12.5613, 224.222)
rotation = -1.5708

[node name="DoorCollision" parent="Doors/LeftDoor2" instance=ExtResource("4_3ouf4")]
position = Vector2(8.88258, 223.575)

[node name="RigthDoor" type="Node2D" parent="Doors"]

[node name="LevelDoor2" parent="Doors/RigthDoor" instance=ExtResource("3_7uyri")]
position = Vector2(238, 75)
rotation = 1.5708

[node name="DoorCollision" parent="Doors/RigthDoor" instance=ExtResource("4_3ouf4")]
position = Vector2(235, 75)

[node name="RigthDoor2" type="Node2D" parent="Doors"]

[node name="LevelDoor2" parent="Doors/RigthDoor2" instance=ExtResource("3_7uyri")]
position = Vector2(237.525, 224.506)
rotation = 1.5708

[node name="DoorCollision" parent="Doors/RigthDoor2" instance=ExtResource("4_3ouf4")]
position = Vector2(236.902, 225.508)

[node name="Alice" parent="." instance=ExtResource("3_aaabw")]
position = Vector2(132, 52)
up_direction = Vector2(1, -0.0004)

[node name="Camera2D" type="Camera2D" parent="Alice"]

[node name="Canvas" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_ocw3v")

[node name="inventory" parent="Canvas" instance=ExtResource("7_gxwug")]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -62.5
offset_right = 112.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsNode" parent="Canvas" instance=ExtResource("8_hnx62")]
visible = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Map" parent="." instance=ExtResource("9_ebg54")]

[connection signal="body_entered" from="Doors/UpDoor/LevelDoor4" to="." method="_on_level_door_4_body_entered"]
[connection signal="body_entered" from="Doors/DownDoor/LevelDoor" to="." method="_on_level_door_body_entered"]
[connection signal="body_entered" from="Doors/LeftDoor/LevelDoor3" to="." method="_on_level_door_3_body_entered"]
[connection signal="body_entered" from="Doors/LeftDoor2/LevelDoor3" to="." method="_on_level_door_3_body_entered_2"]
[connection signal="body_entered" from="Doors/RigthDoor/LevelDoor2" to="." method="_on_level_door_2_body_entered"]
[connection signal="body_entered" from="Doors/RigthDoor2/LevelDoor2" to="." method="_on_level_door_2_body_entered_2"]
